--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <rm-root></rm-root>
+  <rm-rijksmuseum-explorer></rm-rijksmuseum-explorer>
 </body>
 </html>
